--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,16 @@
-# Dependencies
-markdown:         redcarpet
-highlighter:         true
+name: Your New Jekyll Site
+description: Blogging about stuffs
+meta_description: "Your New Jekyll Site, Blogging about stuffs"
 
-# Permalinks
-permalink:        pretty
+markdown: kramdown
+highlighter: pygments
+logo: false
+paginate: 15
+baseurl: /
+domain_name: 'http://yourblog-domain.com'
+google_analytics: 'UA-XXXXXXXX-X'
+gems: [jekyll-paginate]
 
-# Setup
-title:            黑程式
-tagline:          'A Jekyll theme'
-description:      '不認真讀書的工程師'
-url:              https://willsbor.github.io/
-
-author:
-  name:           'willsbor Kang'
-  url:            https://www.facebook.com/willsbor.kang
-
-paginate:         5
-gems:             [jekyll-paginate]
-
-# Custom vars
-# version:          2.0.0
-
-github:
-  repo:           https://github.com/willsbor
+# Details for the RSS feed generator
+url:            'blog url'
+author:         'Your Name'
