--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 
-name: My blog
-description: A jekyll theme
+name: 想起程式
+description: 程式... 只是語言... 更需要精鍊
 
 # url is currently only used only for the RSS feed in feed.xml
 url: https://willsbor.github.io
